# torch_media

./: .gitignore  CLAUDE.md  CMakeLists.txt  THIRD_PARTY_LICENSES  libtorchmedia_rule.lua  main.cpp  readme.md
develop_log/: README.md
develop_log/2026-05-30/: progress01-remove-ffmpeg-dr_wav-io.md
develop_log/2026-05-30/tasks/: task01-vendor-dr_wav-wav-path.md
develop_log/2026-05-31/: progress01-functional-correctness-and-test-harness.md  progress02-functional-expansion-tier1.md  progress03-vision-functional-initial.md  progress04-vision-io-stb.md  progress05-plot-matplotpp.md
develop_log/2026-05-31/tasks/: task01-assertion-test-harness.md  task02-fix-5-functional-bugs.md  task03-create-dct-mfcc.md  task04-griffinlim.md  task05-resample.md  task06-vision-functional.md  task07-vision-io.md  task08-plot-matplotpp.md  task09-plotter-api.md
develop_log/2026-06-01/: progress01-functional-full-port.md  progress02-audio-transform-layer.md
develop_log/2026-06-01/tasks/: task01-lfilter-biquad-filtfilt.md  task02-biquad-designers.md  task03-effects-contrast-dcshift-gain.md  task04-effects-overdrive-phaser-flanger.md  task05-vad.md  task06-companding-emphasis.md  task07-fftconvolve-addnoise-speed.md  task08-stft-phasevocoder-pitchshift.md  task09-feature-deltas-linfbank-centroid.md  task10-specaugment-mask.md  task11-cmn-pitchdetect.md  task12-loudness.md  task13-metrics-editdistance-frechet.md  task14-beamforming.md  task15-forced-align.md  task16-rnnt-loss.md  task17-apply-codec.md  task18-dither.md  task19-transform-pattern-spectral-primitives.md  task20-mel-cepstral.md  task21-resample-time-domain.md  task22-augmentation.md  task23-thin-wrappers.md  task24-convolution-noise.md  task25-beamforming.md
develop_log/templates/: progress.template.md  task.template.md
libtorchmedia/: CMakeLists.txt  xmake.lua
libtorchmedia/include/: torchmedia.hpp
libtorchmedia/include/torchmedia/: audio.hpp  basic.hpp  globel_include.hpp  plot.hpp  util.hpp  vision.hpp
libtorchmedia/include/torchmedia/_audio/: _functional.hpp  _functional_alignment.hpp  _functional_beamforming.hpp  _functional_filtering.hpp  _functional_methods_options.hpp  _io.hpp  _transform.hpp  _transform_augment.hpp  _transform_beamform.hpp  _transform_effects.hpp  _transform_feature.hpp  _transform_spectral.hpp  _transform_time.hpp  audio_util.hpp
libtorchmedia/include/torchmedia/_plot/: _plot.hpp
libtorchmedia/include/torchmedia/_vision/: _functional.hpp  _io.hpp
script/: create_dummy_audio.py  download_dep  plot_spectrogram.py
unit_test/: CMakeLists.txt  test_util.hpp
unit_test/audio/: CMakeLists.txt
unit_test/audio/functional/: CMakeLists.txt  compile_commands.json  gen_golden.py  main.cpp  xmake.lua
unit_test/audio/io/: CMakeLists.txt  compile_commands.json  main.cpp  xmake.lua
unit_test/plot/: CMakeLists.txt  main.cpp
unit_test/vision/: CMakeLists.txt
(+8 files in other folders)
